# GNN-MorphMap

./: FunctionNeighbours.ipynb  Heatmap.ipynb  ModelAccuracy.ipynb  README.md  SLCOR.ipynb  Scatterplots.ipynb  compute_scores.py  environment.yml  make_predictions.py  pyproject.toml  run_morphmap_gnn.sh  transform_predictions.py
configurations/: config.yaml
configurations/prediction_tasks/: gene_bp.yaml  gene_bp__go.yaml  gene_bp__go__enriched.yaml  gene_bp__go__enriched_0.30__QC.yaml  gene_bp__go__enriched_0.40__QC.yaml  gene_bp__go__enriched_0.50__QC.yaml  gene_cc.yaml  gene_cc__go.yaml  gene_cc__go__enriched.yaml  gene_mf.yaml  gene_mf__go.yaml  gene_mf__go__enriched.yaml  gene_mf__go__enriched_0.30__QC.yaml  gene_mf__go__enriched_0.40__QC.yaml  gene_mf__go__enriched_0.50__QC.yaml  gene_pathway.yaml
tests/: biomart_hugogeneid.tsv  ensembl_hugo_entrez_conversion.tsv  geneid2hugo.tsv
trained_models/: README_MODELS.md
