[tool.poetry]
name = "evord_evognn_lib"
version = "0.1.0"
description = "isRD python library boilerplate."
authors = ["in silico R&D Team <evoisrd@evotec.com>"]
license = "Evotec Internal"
readme = "README.md"
homepage = ""
repository = ""

[tool.poetry.urls]
"Bug Tracker" = ""

[[tool.poetry.source]]

name = "isrdregistry"
url = ""
# secondary = true
priority = "explicit"


[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torch-geometric = "2.5.2"
neo4j = "5.8.0"
matplotlib = "3.7.1"
pandas = "2.0.1"
plotly = "5.3.1"
pre-commit = "^3.3.3"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"
omegaconf = "^2.3.0"
gseapy = "^1.0.4"
hydra-core = "^1.3.2"
mlflow = "^2.4.1"
streamlit = "^1.23.1"
pyvis = "0.1.9"
biopython = "1.79"
streamlit-echarts = "0.3.0"
stvis = "0.0.1"
autoflake = "^2.1.1"
seaborn = "^0.12.2"
setuptools = "^68.0.0"
nbqa = {extras = ["toolchain"], version = "^1.7.0"}
numba = "0.57.1"
umap-learn = "0.5.3"
notebook = "^7.0.0"
debugpy = "1.6.5"
pytest-mock = "^3.12.0"
pytest-datafiles = "^3.0.0"
pytest-subtests = "^0.11.0"
mypy = "^1.6.1"
types-requests = "^2.31.0.10"
pydantic = {version = "<2", extras = ["dotenv"]}
gravis = "0.1.0"
ogb = "^1.3.6"
memory-profiler = "^0.61.0"
opentsne = "^1.0.1"
pymongo = "^4.6.1"
lightning = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
ipykernel = "^6.25.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "v$version"
version_files = []
bump_message = "chore(release): Deploying version $new_version!"
update_changelog_on_bump = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = "evord_evognn_lib"
default_section = "THIRDPARTY"
skip = ".tox,.eggs,ci/templates,build,dist"

[tool.pytest.ini_options]
addopts = "-ra -v --cov=src --cov-report xml --cov-report term --cov-report html --junitxml=report.xml --strict-markers --doctest-modules --tb=short --pyargs"
testpaths = ["tests/unit"]
markers = ["datafiles: mark files for use in tests"]
minversion = "3.10.9"

[tool.coverage.paths]
source = [""]

[tool.coverage.run]
branch = true
source = [""]
omit = ["*/settings/*"]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["*/settings/*"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
disallow_any_generics = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"